dnd + on-open actions